fix: correção no chat

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>QuickAttack - Um tabuleiro virtual para RPGs!</title>
+  <title>QuickAttack - Se divirta com o tabuleiro virtual brasileiro para RPGs!</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="qck-ico.svg">
